<resources>
    <string name="tab_text_1">Add user</string>
    <string name="tab_text_2">User list</string>


    <string name="template_firstname">John</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="create_a_new_account">New Top G</string>
    <string name="template_lastname">Wick</string>
    <string name="sex">Sex</string>
    <string name="template_sex">M or F</string>
    <string name="age">Age</string>
    <string name="template_age">18</string>
    <string name="nationality">Nationality</string>
    <string name="template_nationality">Croatian</string>
    <string name="id_number">ID number</string>
    <string name="template_idnumber">3910391023</string>
    <string name="birth_place">Birth place</string>
    <string name="template_birth_place">Zagreb</string>
    <string name="place_of_residence">Place of residence</string>
    <string name="template_place_of_residence">Bucharest</string>
    <string name="zip_code">ZIP code</string>
    <string name="template_zip_code">10362</string>
    <string name="zodiac_sign">Zodiac sign</string>
    <string name="template_zodiac_sign">Taurus</string>
    <string name="height">Height(in cm)</string>
    <string name="template_height">178</string>
    <string name="weight">Weight(in kg)</string>
    <string name="template_weight">69</string>
    <string name="add">Add</string>
    <string name="bench_weight">How much do you bench(in kg)</string>
    <string name="template_bench_weight">100</string>
    <string name="squat_weight">How much do you squat(in kg)</string>
    <string name="template_squat_weight">180</string>
    <string name="color_of_your_bugatti">What color is your bugatti? </string>
    <string name="template_bugatti_color"> Blood red</string>
    <string name="gf_number"> How many girlfriends you have? </string>
    <string name="net_worth"> What is your net worth? </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="option_0">0 (incel)</string>
    <string name="option_1">1 (simp)</string>
    <string name="option_2">2-3 (alpha)</string>
    <string name="option_3">4-5 (player)</string>
    <string name="option_4">>5 (Top G)></string>
    <string name="background">background</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="details_activity_title">More about this dude</string>

</resources>